# AlbaWrap

./: CMakeLists.txt  README.md  appDefines.h.in  changeList.txt
CMakeInput/: AppConfig.cmake.in
Documentation/Doxygen/: app_doxyfile.in
Installer/: AppInstallerScript.nsi.in  AssemblerProLicence.txt
Testing/: CMakeLists.txt
Workflows/: CMakeLists.txt  Workflows.cpp  Workflows.hpp  albaWrapLogic.cpp  albaWrapLogic.h  appDecl.h  pybind11.cpp  sum.cpp  sum.hpp
